--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8==6.0.0 flake8-isort==6.0.0
     - name: Test with flake8
-      run: python -m flake8 backend/ name: Main Taski Workflow
+      run: python -m flake8 backend/
+      name: Main Taski Workflow
 
 on:
   push:
